Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/expression/NullAppend.out
NullAppend.java:11:21: compiler.err.operator.cant.be.applied.1: +, compiler.misc.type.null, compiler.misc.type.null
1 error
