Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/expression/NullAppend.java
/*
 * @test  /nodynamiccopyright/
 * @bug 4620794
 * @summary compiler allows null + null
 * @author gafter
 *
 * @compile/fail/ref=NullAppend.out -XDrawDiagnostics  NullAppend.java
 */

class NullAppend {{
    String s = null + null;
}}
